--- a/assets/localization/PT-BR.json
+++ b/assets/localization/PT-BR.json
@@ -14,6 +14,7 @@
 		[ "CANCEL", "Cancelar" ],
 		[ "DONE", "Pronto" ],
 		[ "SEARCH", "Procurar" ],
+		[ "HELP", "Ajuda" ],
 		[ "COMMENT", "Comentar" ],
 		[ "MARKDOWN", "Markdown" ],
 		[ "USER_NOT_FOUND", "Usuário não encontrado!" ],
