Added language selection to Dashboard options, corrected formatting for localized content.

--- a/assets/localization/PT-BR.json
+++ b/assets/localization/PT-BR.json
@@ -97,8 +97,8 @@
 		[ "GM_SETTING_LINE_1", "Habilitar essa opção para acesso" ],
 		[ "GM_SETTING_LINE_2", "para a Tela do GM." ],
 		[ "LANGUAGE", "Linguagem" ],
-		[ "ENGLISH", "English" ],
-		[ "PORTUGUESE_BR", "Português do Brasil" ],
+		[ "EN-US", "English" ],
+		[ "PT-BR", "Português do Brasil" ],
 		[ "CHANGE_PASSWORD", "Mudar Senha" ],
 		[ "NEW_PASSWORD", "Nova Senha" ],
 		[ "CONFIRM_PASSWORD", "Confirmar Senha" ],
@@ -257,6 +257,7 @@
 		[ "RACE_KHAJIIT_OHMES", "Khajiit (Ohmes)" ],
 		[ "RACE_MAORMER", "Maormer" ],
 		[ "RACE_REACHMAN", "Reachman" ],
+		[ "RACE_ASHLANDER", "Ashlander", "// Not a real race, but it's used by the Name Generator."],
 		[ "SUPERNATURAL_WEREWOLF", "Lobisomem" ],
 		[ "SUPERNATURAL_VAMPIRE", "Vampiro" ],
 		[ "SUPERNATURAL_VAMPIRE_DAGGERFALL", "Vampiro (Daggerfall)" ],
