Added Portuguese handbook and localization tweaks.

--- a/assets/localization/PT-BR.json
+++ b/assets/localization/PT-BR.json
@@ -247,17 +247,16 @@
 		[ "RACE_ALTMER", "Altmer" ],
 		[ "RACE_ARGONIAN", "Argonian" ],
 		[ "RACE_BOSMER", "Bosmer" ],
-		[ "RACE_BRETON", "Bretão" ],
+		[ "RACE_BRETON", "Breton" ],
 		[ "RACE_DUNMER", "Dunmer" ],
 		[ "RACE_IMPERIAL", "Imperial" ],
 		[ "RACE_KHAJIIT", "Khajiit" ],
-		[ "RACE_NORD", "Nordico" ],
+		[ "RACE_NORD", "Nord" ],
 		[ "RACE_ORC", "Orc" ],
 		[ "RACE_REDGUARD", "Redguard" ],
 		[ "RACE_KHAJIIT_OHMES", "Khajiit (Ohmes)" ],
 		[ "RACE_MAORMER", "Maormer" ],
 		[ "RACE_REACHMAN", "Reachman" ],
-		[ "RACE_ASHLANDER", "Ashlander", "// Not a real race, but it's used by the Name Generator."],
 		[ "SUPERNATURAL_WEREWOLF", "Lobisomem" ],
 		[ "SUPERNATURAL_VAMPIRE", "Vampiro" ],
 		[ "SUPERNATURAL_VAMPIRE_DAGGERFALL", "Vampiro (Daggerfall)" ],
@@ -291,8 +290,8 @@
 		[ "ATTRIBUTE_SPEED", "Velocidade" ],
 		[ "ATTRIBUTE_SPEED_ABBR", "Vel" ],
 		[ "ATTRIBUTE_SPEED_DESCRIPTION", "Quão rápido você se move." ],
-		[ "ATTRIBUTE_ENDURANCE", "Resistência" ],
-		[ "ATTRIBUTE_ENDURANCE_ABBR", "Res" ],
+		[ "ATTRIBUTE_ENDURANCE", "Constituição" ],
+		[ "ATTRIBUTE_ENDURANCE_ABBR", "Con" ],
 		[ "ATTRIBUTE_ENDURANCE_DESCRIPTION", "Quão resistente você é." ],
 		[ "ATTRIBUTE_PERSONALITY", "Personalidade" ],
 		[ "ATTRIBUTE_PERSONALITY_ABBR", "Per" ],
@@ -332,7 +331,7 @@
 		[ "SKILL_RESTORATION_DESCRIPTION", "O quão bem você restaura ou reforça o corpo." ],
 		[ "SKILL_ACROBATICS", "Acrobacia" ],
 		[ "SKILL_ACROBATICS_DESCRIPTION", "O quão bem você pula, escala e evita danos de queda."],
-		[ "SKILL_ATHLETICS", "Atleticismo" ],
+		[ "SKILL_ATHLETICS", "Atletismo" ],
 		[ "SKILL_ATHLETICS_DESCRIPTION", "O quão bem você pode correr e nadar." ],
 		[ "SKILL_LEGERDEMAIN", "Prestidigitação" ],
 		[ "SKILL_LEGERDEMAIN_DESCRIPTION", "O quão bem você rouba bolsos e destranca fechaduras." ],
@@ -342,7 +341,7 @@
 		[ "SKILL_PERCEPTION_DESCRIPTION", "Notar detalhes do mundo à sua volta." ],
 		[ "SKILL_SNEAK", "Furtividade" ],
 		[ "SKILL_SNEAK_DESCRIPTION", "O quão bem você se move sem ser notado." ],
-		[ "SKILL_SPEECHCRAFT", "Persuasão" ],
+		[ "SKILL_SPEECHCRAFT", "Lábia" ],
 		[ "SKILL_SPEECHCRAFT_DESCRIPTION", "O quão bem você pode influenciar outros ao admirar, intimidar ou provocar eles." ],
 		[ "SKILL_ALCHEMY", "Alquimia" ],
 		[ "SKILL_ALCHEMY_DESCRIPTION", "O quão bem você pode misturar poções e venenos, assim como reconhecer e usar ingredientes alquimicos." ],
@@ -368,8 +367,8 @@
 		[ "SKILL_BLOOD_MAGIC_DESCRIPTION", "Uma forma de magia negra para manipular o sangue, famosamente usado por vampiros." ],
 		[ "SKILL_BOSMER_LORE", "História Bosmer" ],
 		[ "SKILL_BOSMER_LORE_DESCRIPTION", "Estudos da história do povo Bosmer, assim como a Caçada Selvagem." ],
-		[ "SKILL_BRETON_LORE", "História Bretã" ],
-		[ "SKILL_BRETON_LORE_DESCRIPTION", "Estudos da história do povo Bretão e sua mistura ancestral entre homens e mer." ],
+		[ "SKILL_BRETON_LORE", "História Breton" ],
+		[ "SKILL_BRETON_LORE_DESCRIPTION", "Estudos da história do povo Breton e sua mistura ancestral entre homens e mer." ],
 		[ "SKILL_DAEDRIC_LORE", "História Daédrica" ],
 		[ "SKILL_DAEDRIC_LORE_DESCRIPTION", "Estudo de segredos daédricos - suas sociedades/planos, invocá-los e sua linguagem." ],
 		[ "SKILL_DRAGON_LORE", "História Dracônica" ],
@@ -385,7 +384,7 @@
 		[ "SKILL_HANDLE_ANIMAL", "Manejo de Animais" ],
 		[ "SKILL_HANDLE_ANIMAL_DESCRIPTION", "Lidar com animais, domésticos ou não." ],
 		[ "SKILL_HIST_LORE", "História da Hist" ],
-		[ "SKILL_HIST_LORE_DESCRIPTION", "Estudos da complexidade da Hist, assim como o Jel, a linguagem dos Argonianos." ],
+		[ "SKILL_HIST_LORE_DESCRIPTION", "Estudos da complexidade da Hist, assim como o Jel, a linguagem dos Argonians." ],
 		[ "SKILL_IMPERIAL_LORE", "História Imperial" ],
 		[ "SKILL_IMPERIAL_LORE_DESCRIPTION", "Estudos da história do povo Imperial e do Império Alessiano que veio antes deles." ],
 		[ "SKILL_KHAJIIT_LORE", "História Khajiit" ],
@@ -402,9 +401,9 @@
 		[ "SKILL_NECROMANCY_DESCRIPTION", "Conhecimento da invocação e/ou controle dos mortos." ],
 		[ "SKILL_NEDIC_LORE", "História Nédica" ],
 		[ "SKILL_NEDIC_LORE_DESCRIPTION", "Estudos da história dos primeiros homens que assentaram-se em Tamriel, os Nedes." ],
-		[ "SKILL_NORD_LORE", "História Nordica" ],
+		[ "SKILL_NORD_LORE", "História Nord" ],
 		[ "SKILL_NORD_LORE_DESCRIPTION", "Estudos da história dos Nords e sua ancestral terra natal Atmora." ],
-		[ "SKILL_ORCISH_LORE", "História Orquica" ],
+		[ "SKILL_ORCISH_LORE", "História Orc" ],
 		[ "SKILL_ORCISH_LORE_DESCRIPTION", "Estudos da história dos mer pária, ou Orcs, assim como suas linguagens modernas e arcaicas." ],
 		[ "SKILL_REACH_LORE", "História do Reach" ],
 		[ "SKILL_REACH_LORE_DESCRIPTION", "Conhecimento do povo, costumes e religião do Reach." ],
@@ -442,7 +441,7 @@
 		[ "DAMAGE_NONE", "Nenhum" ],
 		[ "DAMAGE_PHYSICAL", "Físico" ],
 		[ "DAMAGE_DISEASE", "Doença" ],
-		[ "DAMAGE_FLAME", "Chama" ],
+		[ "DAMAGE_FLAME", "Fogo" ],
 		[ "DAMAGE_FROST", "Gelo" ],
 		[ "DAMAGE_POISON", "Veneno" ],
 		[ "DAMAGE_SHOCK", "Choque" ],
