Changed site to reference RP Profile Viewer addon rather than Rollplay Integration.

--- a/assets/localization/PT-BR.json
+++ b/assets/localization/PT-BR.json
@@ -125,7 +125,7 @@
 		[ "CHARACTER_SAVED_SUCCESSFULLY", "Personagem salvo com sucesso! Você pode retornar ao painel de controle." ],
 		[ "CHARACTER_PROFILE", "Perfil do Personagem" ],
 		[ "SHORT_DESCRIPTION", "Descrição Curta" ],
-		[ "SHORT_DESCRIPTION_DESCRIPTION", "Isso é o que os jogadores verão se clicarem em seu personagem durante uma sessão de Rollplay. Este é um bom lugar para mencionar características físicas e informações publicamente conhecidas sobre seu personagem!" ],
+		[ "SHORT_DESCRIPTION_DESCRIPTION", "Este é um bom lugar para mencionar características físicas e informações publicamente conhecidas sobre seu personagem." ],
 		[ "SHORT_DESCRIPTION_HELPER", "Isso é apenas um sumário.  Por favor, seja breve! (caractéres CURRENT/MAX)" ],
 		[ "GENERAL_INFORMATION", "Informações Gerais" ],
 		[ "CHARACTER_IMAGE", "Imagem do Personagem" ],
@@ -137,7 +137,7 @@
 		[ "ENEMIES_DESCRIPTION", "Grupos ou pessoas quais você têm inimizade." ],
 		[ "RELATIONSHIPS_DESCRIPTION", "Outros personagens que são próximos de você." ],
 		[ "BIOGRAPHY", "Biografia" ],
-		[ "BIOGRAPHY_DESCRIPTION", "### Escreva a Backstory do personagem como desejar.  Títulos da seção devem ser feitos com 3 hashtags, como acima." ],
+		[ "BIOGRAPHY_DESCRIPTION", "Escreva a backstory do personagem como desejar.\n\n### Títulos da seção devem ser feitos com 3 hashtags" ],
 		[ "PREVIEW", "Pré-vizualizar" ],
 		[ "CHARACTER_HELP_TITLE", "Construindo seu Personagem" ],
 		[ "NAMERACEETC", "Nome/Raça/Etc." ],
